# Hella-Webtilian

./: .README  .dockerignore  .env.dev.example  .env.prod.example  .eslint.cjs  .flyignore  .gitignore  .pre-commit-config.yaml  .prettierignore  .stylelintrc.json  AGENTS.md  ARCHITECTURE.md  Caddyfile  Dockerfile  Dockerfile.dev  ISSUES.md  Pipfile  Procfile  README.md  docker-compose.dev.yml  docker-compose.yml  fly.toml  main.js  manage.py  mypy.ini  old.webpack.old.config.js  package-lock.json  package.json  pyproject.toml  tailwind.config.js  vite.config.js  webpack.config.js
_seed_data/hr_about/: carousel.yml  pullquotes.yml
_seed_data/hr_bulletin/: outline.yml
djangoProject/: settings.py  urls.py
docker/: entrypoint.dev.sh  entrypoint.sh
docs/: htmx_fullpage_gaps.md  s3_media.md
hr_about/: __init__.py  admin.py  apps.py  models.py  signals.py  tests.py  unified_logging.py  urls.py  views.py
hr_access/: __init__.py  _views.py  admin.py  apps.py  auth_backend.py  constants.py  emails.py  forms.py  managers.py  models.py  permissions.py  signals.py  tests.py  tokens.py  urls.py  views.py
hr_bulletin/: __init__.py  admin.py  apps.py  forms.py  managers.py  models.py  signals.py  tests.py  urls.py  views.py
hr_common/: __init__.py  admin.py  apps.py  context_processors.py  logging.py  managers.py  models.py  tests.py  unified_logging.py  urls.py  views.py
hr_config/: django_vite_patch.py  structlog_config.py  tests.py
hr_core/: apps.py  context_processors.py  image_batch.py  media_jobs.py  middleware.py  mixins.py  models.py  tests.py  unified_logging.py
hr_django/: .env  __init__.py  asgi.py  settings.py  tests.py  urls.py  wsgi.py
hr_email/: __init__.py  admin.py  apps.py  conf.py  gmail.py  logging.py  mailjet.py  models.py  provider_settings.py  service.py  tests.py
hr_live/: __init__.py  admin.py  apps.py  managers.py  models.py  tests.py  urls.py  views.py
hr_payment/: __init__.py  admin.py  apps.py  forms.py  models.py  stripe_client.py  stripe_mock.py  tests.py  urls.py  views.py
hr_shop/: __init__.py  admin.py  apps.py  cart.py  context_processors.py  exceptions.py  forms.py  models.py  queries.py  signals.py  tests.py  tokens.py  urls.py  utils.py  views.py
hr_site/: __init__.py  apps.py  models.py  tests.py  unified_logging.py  urls.py  views.py
hr_storage/: __init__.py  apps.py  conf.py  fields.py  storage_backends.py
locomotive/: apps.py  urls.py  views.py
scripts/: backup-db.sh  restore-db.sh  setup.sh  start-dev.sh  start-prod.sh  sync_file_headers.py
tests/: conftest.py  factories.py
tools/: qnap_deploy.md  s3_upload_helper.sh  static_media_pipeline.md
(+487 files in other folders)
