[project]
name = "hella-webtilian"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "concurrent-log-handler>=0.9.28",
    "dj-database-url>=3.1.0",
    "django>=5.2.10",
    "django-imagekit>=6.0.0",
    "django-phonenumber-field>=8.4.0",
    "django-vite>=3.1.0",
    "mailjet-rest>=1.5.1",
    "phonenumbers>=9.0.22",
    "pillow>=12.1.0",
    "pyyaml>=6.0.3",
    "stripe>=14.2.0",
    "structlog>=25.5.0",
    "whitenoise>=6.11.0",
]

[dependency-groups]
dev = [
    "better-exceptions>=0.3.3",
    "django-browser-reload>=1.21.0",
    "django-debug-toolbar>=6.1.0",
    "django-extensions>=4.1",
    "pre-commit>=4.5.1",
    "python-dotenv>=1.2.1",
    "rich>=14.2.0",
]
