[project]
name = "hella-webtilian"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "concurrent-log-handler>=0.9.28",
    "dj-database-url>=3.1.0",
    "django>=5.2.10",
    "django-imagekit>=6.0.0",
    "django-phonenumber-field>=8.4.0",
    "django-rq>=3.2.2",
    "django-storages[boto3]>=1.14.6",
    "django-vite>=3.1.0",
    "factory-boy>=3.3.3",
    "gunicorn>=21.2.0",
    "mailjet-rest>=1.5.1",
    "phonenumbers>=9.0.22",
    "pillow>=12.1.0",
    "pip>=26.0.1",
    "psycopg[binary]>=3.3.2",
    "pytest>=9.0.2",
    "pytest-django>=4.12.0",
    "pyyaml>=6.0.3",
    "redis>=7.1.0",
    "stripe>=14.2.0",
    "structlog>=25.5.0",
    "whitenoise>=6.11.0",
]

[dependency-groups]
dev = [
    "better-exceptions>=0.3.3",
    "black>=26.1.0",
    "django-browser-reload>=1.21.0",
    "django-debug-toolbar>=6.1.0",
    "django-extensions>=4.1",
    "pre-commit>=4.5.1",
    "python-dotenv>=1.2.1",
    "rich>=14.2.0",
    "ruff>=0.14.14",
]
test = [
    "pytest>=8.0",
    "pytest-django>=4.9",
    "factory-boy>=3.3"
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "hr_config.settings.dev"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 180
target-version = ["py310"]
skip-string-normalization = false

[tool.ruff]
line-length = 180
target-version = "py310"
fix = true

[tool.ruff.lint]
#select = ["B", "E", "F", "I", "RUF", "SIM", "UP", "W"]
select = ["F", "E", "W", "I", "B", "UP"]

ignore = [
  "E501",  # line length (Black owns formatting)
  "E203",  # Black-compatible
]

[tool.ruff.lint.per-file-ignores]
"hr_config/settings/*.py" = ["F405"]
"**/__init__.py" = ["F401"]
"**/migrations/*.py" = ["E501", "F401"]
